# minimal_opengl_cmake

./: README.md
src/: CMakeLists.txt  main.cpp
